plugins {
	id 'java'
	id 'org.springframework.boot' version '2.1.18.RELEASE'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'jacoco'
}

group = 'com.mlorenzo'
version = '0.0.1-SNAPSHOT'

java {
	//sourceCompatibility = '1.8'
	// Indicamos la versión de Java de esta manera para que sea compatible con la versión de Gradle
	sourceCompatibility = JavaVersion.VERSION_1_8
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
	implementation 'org.webjars:bootstrap:3.3.7-1'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
}

// Export test coverage
jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled false
    }
}